upgraded dependencies